--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 :root {
   box-sizing: border-box;
-  font-family: "Noto-sans", sans-serif;
+  font-family: system-ui, -apple-system, "Noto Sans", "Liberation Sans", Arial,
+    sans-serif;
   --black100: #2e2e2e;
   --padding-horizontal: 48px;
 }
@@ -22,21 +23,22 @@
 }
 
 h3 {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 28px;
+  font-weight: var(--font-weight-h3);
+  font-size: var(--font-size-h3);
+  line-height: var(--line-height-h3);
   color: var(--black100);
+  margin: 0;
 }
 p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
+  font-weight: var(--font-weight-mini);
+  font-size: var(--font-sizemini);
+  line-height: var(--line-height-h3);
   margin: 0 auto;
   color: var(--black100);
 }
 h2 {
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 38px;
+  font-weight: var(--font-weight-h2);
+  font-size: var(--font-size-h2);
+  line-height: var(--line-height-h2);
   color: var(--black100);
 }
