--- a/header_form.css
+++ b/header_form.css
@@ -2,7 +2,7 @@
   background-image: url("image_building.png");
   background-repeat: no-repeat;
   background-color: #e3f2fe;
-  background-position: top 110px center;
+  background-position: bottom center;
 }
 .header_form_name {
   font-size: 42px;
