--- a/hero_form.css
+++ b/hero_form.css
@@ -38,3 +38,27 @@
   margin-top: 24px;
   margin-bottom: 308px;
 }
+
+@media (max-width: 1023px) {
+  :root {
+    --padding-horizontal: 24px;
+  }
+  .hero_form_name {
+    padding-top: 84px;
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 700;
+    color: #2e2e2e;
+  }
+  .hero_form_description {
+    padding-top: 16px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #2e2e2e;
+    padding-right: 24px;
+  }
+  .hero_form_form2 {
+    display: none;
+  }
+}
