--- a/block_advantage.css
+++ b/block_advantage.css
@@ -41,5 +41,7 @@
   .block_advantage_table {
     display: flex;
     flex-flow: row nowrap;
+    overflow-x: auto;
+    transform: translate3d(0px, 0px, 0px);
   }
 }
