--- a/block_advantage.css
+++ b/block_advantage.css
@@ -40,8 +40,13 @@
   }
   .block_advantage_table {
     display: flex;
-    flex-flow: row nowrap;
+    justify-content: space-between;
+    width: 100%;
     overflow-x: auto;
     transform: translate3d(0px, 0px, 0px);
+    transition-duration: 0ms;
+  }
+  .block_advantage_block {
+    width: 292px;
   }
 }
