--- a/main.css
+++ b/main.css
@@ -45,4 +45,7 @@ h2 {
   font-size: var(--font-size-h2);
   line-height: var(--line-height-h2);
   color: var(--black100);
+  margin: 0;
+  padding-top: 48px;
+  text-align: center;
 }
