--- a/block_advantage.css
+++ b/block_advantage.css
@@ -5,17 +5,20 @@
   padding-bottom: 48px;
   padding-top: 48px;
 }
-.block_advantage_h3 {
-  padding-top: 104px;
+.icon-wrapper {
+  position: relative;
+  width: 72px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.block_advantage_img1 {
+.icon-wrapper_background {
   position: absolute;
+  inset: 0;
 }
-.block_advantage_img2 {
-  height: 28.5px;
-  width: 30px;
-  margin: 17px 21px 18.5px 21px;
-  position: absolute;
+.icon-wrapper_icon {
+  position: relative;
 }
 .block_advantage_block {
   display: flex;
@@ -24,6 +27,7 @@
   border: 1px solid #c6deea;
   padding: 24px 24px;
   border-radius: 16px;
+  flex: 1 0 292px;
 }
 @media (max-width: 1023px) {
   .block_advantage_title {
@@ -37,10 +41,5 @@
     justify-content: space-between;
     width: 100%;
     overflow-x: auto;
-    transform: translate3d(0px, 0px, 0px);
-    transition-duration: 0ms;
-  }
-  .block_advantage_block {
-    width: 292px;
   }
 }
