--- a/block_forma.css
+++ b/block_forma.css
@@ -3,13 +3,35 @@
   display: grid;
   place-items: center;
 }
-.block_forma__menu {
+.block__forma_menu {
   display: flex;
   flex-direction: row;
   gap: 24px;
+  padding-top: 48px;
+  margin: 0 auto;
 }
 .block_forma_menu1 {
   display: flex;
   flex-direction: row;
   gap: 32px;
+  width: 776px;
+  border-bottom: 1px solid #aac6d6;
+}
+.block_forma_button {
+  border: 0;
+  background: none;
+  line-height: 24px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #2e2e2e;
+}
+.block_forma_menu2 {
+  border-bottom: 1px solid #aac6d6;
+  width: 328px;
+}
+.block__forma_title4 {
+  line-height: 24px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #2e2e2e;
 }
