--- a/block_forma.css
+++ b/block_forma.css
@@ -1,6 +1,6 @@
 .block__forma {
   padding-top: 16px;
-  display: grid;
+  display: flex;
   place-items: center;
 }
 .block__forma_menu {
@@ -11,6 +11,11 @@
   margin: 0 auto;
 }
 .block_forma_menu1 {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.block_forma_buttons {
   display: flex;
   flex-direction: row;
   gap: 32px;
@@ -23,15 +28,19 @@
   line-height: 24px;
   font-size: 20px;
   font-weight: 500;
+  height: 56px;
   color: #2e2e2e;
 }
 .block_forma_menu2 {
   border-bottom: 1px solid #aac6d6;
   width: 328px;
+  align-items: center;
+  height: 56px;
 }
 .block__forma_title4 {
   line-height: 24px;
   font-size: 20px;
   font-weight: 500;
   color: #2e2e2e;
+  margin: 0 auto;
 }
