--- a/block_forma.css
+++ b/block_forma.css
@@ -59,7 +59,6 @@
   padding-top: 24px;
   display: grid;
   gap: 4px;
-  grid-template-columns: 100%;
 }
 .block_forma_content {
   background-color: #e3f2fe;
@@ -67,5 +66,6 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  border-radius: 4px;
   color: #2e2e2e;
 }
