--- a/block_forma.css
+++ b/block_forma.css
@@ -39,7 +39,7 @@
   gap: 32px;
   padding-bottom: 32px;
   border-bottom: 1px solid #aac6d6;
-  width: 776px;
+  width: inherit;
 }
 .block_forma_menu2 {
   display: flex;
@@ -57,8 +57,8 @@
   margin: 0 auto;
 }
 .block_forma_content_description {
-  display: grid;
   grid-template-columns: repeat(8, auto);
+  display: grid;
   grid-gap: 4px;
   padding-top: 24px;
 }
@@ -71,4 +71,9 @@
   border-radius: 4px;
   color: #2e2e2e;
   width: max-content;
+}
+.block_forma_content1 {
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
 }
