--- a/block_forma.css
+++ b/block_forma.css
@@ -31,6 +31,12 @@
   font-weight: 500;
   height: 56px;
   color: #2e2e2e;
+  border-bottom: 3px solid transparent;
+  transition: all 0.3s;
+  padding: 0px;
+}
+.block_forma_button:hover {
+  border-bottom: 3px solid black;
 }
 .block_forma_menu1_price {
   display: flex;
@@ -41,24 +47,25 @@
   border-bottom: 1px solid #aac6d6;
   width: inherit;
 }
+.block_forma_menu1_price_description {
+  flex: 1 1 170px;
+}
 .block_forma_menu2 {
   display: flex;
   width: 100%;
+  flex-direction: column;
   align-self: flex-start;
-  align-items: center;
-  height: 56px;
-  border-bottom: 1px solid #aac6d6;
 }
 .block__forma_title4 {
   line-height: 24px;
   font-size: 20px;
   font-weight: 500;
   color: #2e2e2e;
-  margin: 0 auto;
+  margin: 0;
 }
 .block_forma_content_description {
-  grid-template-columns: repeat(8, auto);
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   grid-gap: 4px;
   padding-top: 24px;
 }
