--- a/block_forma.css
+++ b/block_forma.css
@@ -13,8 +13,8 @@
 .block_forma_menu1 {
   display: flex;
   flex-direction: column;
-  width: 776px;
   gap: 32px;
+  flex: 2 2 66%;
 }
 .block_forma_buttons {
   display: flex;
@@ -52,9 +52,9 @@
 }
 .block_forma_menu2 {
   display: flex;
-  width: 100%;
   flex-direction: column;
   align-self: flex-start;
+  flex: 1 1 33%;
 }
 .block__forma_title4 {
   line-height: 24px;
