--- a/block_forma.css
+++ b/block_forma.css
@@ -95,3 +95,9 @@
   align-self: flex-start;
   flex: 1 1 33%;
 }
+
+.block-forma-menu1-title4 {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #aac6d6;
+}
