--- a/block_forma.css
+++ b/block_forma.css
@@ -1,7 +1,94 @@
 .block-forma-switch {
-  padding-top: 16px;
+  margin: 0;
+  padding-top: 20px;
   display: flex;
-  place-items: center;
+  align-items: center;
+  place-content: center;
+  gap: 16px;
+}
+
+.checkbox-ios {
+  display: inline-block;
+
+  height: 28px;
+
+  line-height: 28px;
+
+  margin-right: 10px;
+
+  position: relative;
+
+  vertical-align: middle;
+
+  font-size: 14px;
+
+  user-select: none;
+}
+
+.checkbox-ios .checkbox-ios-switch {
+  position: relative;
+
+  display: inline-block;
+
+  box-sizing: border-box;
+
+  width: 44px;
+
+  height: 24px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  border-radius: 25%/50%;
+
+  vertical-align: middle;
+
+  background: #aac6d6;
+
+  transition: 0.2s;
+}
+
+.checkbox-ios .checkbox-ios-switch:before {
+  content: "";
+
+  display: inline-block;
+
+  width: 16px;
+
+  height: 16px;
+
+  border-radius: 50%;
+
+  background: white;
+
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+
+  transition: 0.15s;
+}
+
+.checkbox-ios input[type="checkbox"] {
+  display: block;
+
+  width: 0;
+
+  height: 0;
+
+  position: absolute;
+
+  opacity: 0;
+}
+
+.checkbox-ios
+  input[type="checkbox"]:not(:disabled):active
+  + .checkbox-ios-switch:before {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.checkbox-ios input[type="checkbox"]:checked + .checkbox-ios-switch {
+  background: #263f63;
+}
+
+.checkbox-ios input[type="checkbox"]:checked + .checkbox-ios-switch:before {
+  transform: translateX(24px);
 }
 
 .block-forma-menu {
@@ -56,6 +143,7 @@
 
 .block-forma-menu1-price-description {
   flex: 1 1 170px;
+  width: 170px;
 }
 
 .block-forma-menu1-title4 {
