--- a/block_forma.css
+++ b/block_forma.css
@@ -183,6 +183,7 @@
   flex-direction: column;
   align-self: flex-start;
   flex: 1 1 33%;
+  width: auto;
 }
 
 .block-forma-menu2-title4 {
@@ -256,6 +257,10 @@
   .block-forma-img1023 {
     display: none;
   }
+
+  .block-forma-description-p-1023 {
+    display: none;
+  }
 }
 
 @media (max-width: 1023px) {
@@ -283,5 +288,19 @@
     border: 1px solid #aac6d6;
     padding: 16px 24px;
     margin: 24px 0px;
+  }
+
+  .block-forma-menu {
+    padding: 0px;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .block-forma-description-p {
+    display: none;
+  }
+
+  .block-forma-description-p-1023 {
+    display: contents;
   }
 }
