--- a/block_forma.css
+++ b/block_forma.css
@@ -295,7 +295,7 @@
   .block-forma-switch {
     justify-content: space-between;
     flex-direction: row-reverse;
-    border: #aac6d6;
+    border: 1px solid #aac6d6;
     padding: 16px 24px;
     margin: 24px 0px;
   }
