--- a/block_forma.css
+++ b/block_forma.css
@@ -92,11 +92,15 @@
 }
 
 .block-forma-menu {
+  z-index: 0;
   display: flex;
   flex-direction: row;
   gap: 48px;
   padding-top: 48px;
   margin: 0 auto;
+  background-image: url(forma_man.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
 }
 
 .block-forma-menu1 {
@@ -138,12 +142,12 @@
   gap: 32px;
   padding-bottom: 32px;
   border-bottom: 1px solid #aac6d6;
-  width: inherit;
+  width: 100%;
 }
 
 .block-forma-menu1-price-description {
   flex: 1 1 170px;
-  width: 170px;
+  max-width: 100%;
 }
 
 .block-forma-menu1-title4 {
@@ -223,7 +227,7 @@
   bottom: 16px;
   left: 36px;
   border-radius: 4px;
-  width: 205px;
+  max-width: 205px;
   height: 56px;
   background-color: #263f63;
   color: #ffffff;
@@ -237,20 +241,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.block-forma-img-back {
-  z-index: -1;
-  position: absolute;
-  float: right;
-  width: 311.2285963300115px;
-}
-
-.block-forma-img-first {
-  float: right;
-  z-index: 0;
-  position: relative;
-  height: 275px;
 }
 
 .block-forma-img1023 {
