--- a/css/support.css
+++ b/css/support.css
@@ -9,7 +9,6 @@
 
 .support-description {
   margin: 0;
-  padding-top: 48px;
   background-color: #ffffff;
   display: flex;
   justify-content: flex-start;
@@ -23,6 +22,8 @@
 }
 
 .support-description-block1 {
+  padding-top: 48px;
+  padding-bottom: 57px;
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -30,6 +31,8 @@
 }
 
 .support-description-block2 {
+  padding-top: 48px;
+  padding-bottom: 57px;
   display: flex;
   flex-direction: column;
   gap: 32px;
