--- a/css/support.css
+++ b/css/support.css
@@ -87,4 +87,13 @@
   .support-description {
     display: none;
   }
+
+  .support-description-middle {
+    padding: 0;
+    margin-top: -16px;
+    display: flex;
+    gap: 24px;
+    justify-content: space-between;
+    overflow-x: auto;
+  }
 }
