--- a/css/support.css
+++ b/css/support.css
@@ -28,6 +28,7 @@
   flex-direction: column;
   gap: 32px;
   max-width: 376px;
+  flex: 1 1 33%;
 }
 
 .support-description-middle {
@@ -71,7 +72,7 @@
     flex-direction: column;
     gap: 24px;
     border-radius: 16px;
-    flex: 1 1 50%;
+    flex: 1 0 280px;
   }
 
   .support-description-part {
@@ -81,15 +82,24 @@
     gap: 16px;
     border-bottom: 1px solid #aac6d6;
   }
+
+  .support-description-part:last-child {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
 }
 
 @media (max-width: 510px) {
+  .support .container {
+    padding: 0px;
+  }
+
   .support-description {
     display: none;
   }
 
   .support-description-middle {
-    padding: 0;
+    padding: 0 24px;
     margin-top: -16px;
     display: flex;
     gap: 24px;
