--- a/css/support.css
+++ b/css/support.css
@@ -22,13 +22,18 @@
 }
 
 .support-description-block {
-  padding-top: 48px;
-  padding-bottom: 57px;
+  padding: 48px 24px 57px 24px;
   display: flex;
   flex-direction: column;
   gap: 32px;
   max-width: 376px;
   flex: 1 1 33%;
+}
+
+.support-description-part {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .support-description-middle {
