--- a/css/calc.css
+++ b/css/calc.css
@@ -15,15 +15,9 @@
 }
 
 .calc-forma-swipe-tabs {
-  display: flex;
-}
-
-.calc-forma-slider-price-block {
-  max-width: 360px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 48px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 56px;
 }
 
 .calc-forma-edit {
@@ -61,6 +55,11 @@
 }
 
 @media (max-width: 1023px) {
+  .calc-forma-all {
+    display: block;
+    background-color: #c6deea;
+  }
+
   .calc .block-forma-title {
     background-color: #ffffff;
   }
