--- a/css/map.css
+++ b/css/map.css
@@ -5,6 +5,10 @@
   background-color: #aac6d6;
 }
 
+.img-map-mini {
+  display: none;
+}
+
 .map-table {
   padding-top: 48px;
   padding-bottom: 48px;
@@ -29,4 +33,52 @@
 
 .map-table-form .map-table-form-title-p {
   text-align: center;
+}
+
+@media (max-width: 1024px) {
+  .map-table {
+    grid-template-columns: repeat(2, 214px);
+  }
+}
+
+@media (max-width: 1023px) {
+  .map {
+    background-image: none;
+  }
+
+  .map .block-forma-title {
+    padding-top: 32px;
+    padding-bottom: 16px;
+  }
+
+  .img-map-mini {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .map-table {
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+    border-radius: 8px;
+    padding-top: 0px;
+  }
+
+  .map-table-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    background-color: #ffffffd6;
+    gap: 8px;
+    border-radius: 0px;
+    padding-bottom: 16px;
+  }
+
+  .map-table-form .block-forma-title {
+    background-color: #ffffffd6;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    padding: 0px;
+  }
 }
