--- a/css/map.css
+++ b/css/map.css
@@ -52,11 +52,14 @@
   }
 
   .img-map-mini {
+    max-width: 600px;
+    object-fit: cover;
+    height: 250px;
     display: block;
-    margin: 0 auto;
   }
 
   .map-table {
+    margin-top: -76px;
     display: flex;
     flex-direction: column;
     gap: 1px;
@@ -80,5 +83,6 @@
     font-size: 20px;
     line-height: 24px;
     padding: 0px;
+    width: 64px;
   }
 }
