--- a/css/map.css
+++ b/css/map.css
@@ -27,7 +27,7 @@
   gap: 2px;
 }
 
-.map-table-form .block-forma-title {
+.number-map {
   padding-top: 0px;
 }
 
@@ -52,7 +52,8 @@
   }
 
   .img-map-mini {
-    max-width: 600px;
+    max-width: 100%;
+    margin: 0 auto;
     object-fit: cover;
     height: 250px;
     display: block;
@@ -77,8 +78,17 @@
     padding-bottom: 16px;
   }
 
-  .map-table-form .block-forma-title {
-    background-color: #ffffffd6;
+  .map-table-form:first-child {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .map-table-form:last-child {
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+
+  .number-map {
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
