--- a/css/workshit.css
+++ b/css/workshit.css
@@ -12,6 +12,23 @@
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+.grid-template-areas:
+    "steps-number-title steps-number-line "
+    "steps-description";
+}
+
+.item1 {
+    grid-area: steps-number-title;
+  }
+  
+  .item2 {
+    grid-area: steps-number-line;
+  }
+  
+  .item3 {
+    grid-area: steps-description;
+  }
+
 .steps-number-line {
   height: 1px;
   width: 100%;
