--- a/css/support.css
+++ b/css/support.css
@@ -68,6 +68,7 @@
     display: flex;
     gap: 24px;
     justify-content: space-between;
+    overflow: auto;
   }
 
   .support-description-block {
